# HexagonalArchitecturePokemon

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: create_pokemon.rs  fetch_all_pokemons.rs  health.rs  mod.rs
src/cli/: create_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  mod.rs
src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs
src/repositories/: pokemon.rs
